fixed avatar stretching/shrinkage due ti non-square avatar dimensions

--- a/sites/all/themes/lacuna_stories/css/user_profile.css
+++ b/sites/all/themes/lacuna_stories/css/user_profile.css
@@ -28,12 +28,20 @@
 	margin-left: 20px;
 }
 
-#user-profile-main #user-avatar-space img
+#user-profile-main #user-avatar-space .user-picture
 {
 	width: 200px;
 	height: 200px;
 	border: 1px solid #000000;
 	border-radius: 100px;
+	display: inline-block;
+	overflow: hidden;
+}
+
+#user-profile-main #user-avatar-space .user-picture img
+{
+	min-width: 200px;
+	min-height: 200px;
 }
 
 #user-profile-main div.column
